<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<EditText android:layout_height="wrap_content" android:text=""
		android:layout_width="fill_parent" android:layout_alignParentTop="true"
		android:id="@+id/Title" android:hint="@string/hint_task_title"/>
	<EditText android:layout_height="wrap_content" android:text=""
		android:layout_width="fill_parent"
		android:id="@+id/Due" android:hint="@string/hint_due" android:layout_below="@+id/Title" 
		android:layout_toLeftOf="@+id/SetDate" android:editable="false"/>
	<ImageView	android:layout_height="wrap_content" android:layout_alignTop="@+id/Due"
		android:layout_width="wrap_content" android:src="@drawable/calendar" 
		android:id="@+id/SetDate" android:layout_toLeftOf="@+id/ClearDate"/>
	<ImageView	android:layout_height="wrap_content" android:layout_alignTop="@+id/Due"
		android:layout_width="wrap_content" android:src="@drawable/cancel"
		android:id="@+id/ClearDate" android:layout_alignParentRight="true"/>
	<EditText android:layout_height="wrap_content" android:text=""
		android:layout_width="fill_parent"  android:gravity="top"
		android:id="@+id/Notes" android:hint="@string/hint_task_notes" android:layout_below="@+id/Due" 
		android:layout_above="@+id/ButtonBar"/>
	<LinearLayout android:layout_width="fill_parent" android:id="@+id/ButtonBar"
		android:layout_height="wrap_content" android:layout_marginBottom="5dp"
		android:layout_alignParentBottom="true">
		<Button android:text="@string/ok" android:id="@+id/Ok"
		android:layout_width="wrap_content" android:layout_height="wrap_content" 
		 android:layout_weight="1"/>
		<Button android:text="@string/cancel" android:id="@+id/Cancel"
		android:layout_width="wrap_content" android:layout_height="wrap_content" 
		android:layout_weight="1"/>
	</LinearLayout>
</RelativeLayout>
