<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">
	<EditText android:layout_height="wrap_content" android:text=""
		android:layout_width="fill_parent" android:layout_alignParentTop="true"
		android:id="@+id/Title" android:hint="@string/hint_tasklist_title"/>	
	<LinearLayout android:layout_width="fill_parent" android:id="@+id/ButtonBar"
		android:layout_height="wrap_content" android:layout_marginBottom="5dp"
		android:layout_below="@+id/Title">
		<Button android:text="@string/ok" android:id="@+id/Ok"
		android:layout_width="wrap_content" android:layout_height="wrap_content" 
		 android:layout_weight="1"/>
		<Button android:text="@string/cancel" android:id="@+id/Cancel"
		android:layout_width="wrap_content" android:layout_height="wrap_content" 
		android:layout_weight="1"/>
	</LinearLayout>
</RelativeLayout>
